--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -77,10 +77,8 @@
 				li{
 					display: inline;
 					//padding-left:$spacing;
-					
-					
 					a{
-						font-size : $h2_size;
+						font-size : 14px;
 						text-decoration:none;
 						text-align:center;
 						
