--- a/assets/stylesheets/pages/_info-service.scss
+++ b/assets/stylesheets/pages/_info-service.scss
@@ -21,8 +21,6 @@
 				height: 100%;
 				
 				.csc-textpic-text{
-					
-					
 					.csc-textpicHeader{
 						h2 {
 							display: block;
@@ -171,8 +169,22 @@
 		}
 	}	
 	#sidebar{
+		background: white;
+		margin: 2%;
+		padding: 1%;
+		h2{
+			font-size: 17px;
+			line-height: 1em;
+			padding: 2px 0 0 0;
+			margin: 5px 0 5px 0;
+			font-weight: normal;
+			color: #545454 !important;
+		}
 		ul{
+			margin: 0px;
+			padding: 0px;
 			li{
+				padding  : 5px 0px;
 				a{
 					color:$color1;
 					font-weight:bold;
