--- a/assets/stylesheets/pages/_press.scss
+++ b/assets/stylesheets/pages/_press.scss
@@ -82,6 +82,7 @@
 				margin:1%;
 				position: relative;
 				float: left;
+				padding-left: 10px;
 				h2 {
 					margin: 10px 0;
 					font-size: $h2_size;
@@ -107,6 +108,7 @@
 				margin:1%;
 				position: relative;
 				float: left;
+				padding-left: 10px;
 				h2 {
 					margin: 10px 0;
 					font-size: $h2_size;
@@ -133,6 +135,7 @@
 				margin:1%;
 				position: relative;
 				float: left;
+				padding-left: 10px;
 				h2 {
 					margin: 10px 0;
 					font-size: $h2_size;
