--- a/assets/stylesheets/pages/contact/_booking_inquiry.scss
+++ b/assets/stylesheets/pages/contact/_booking_inquiry.scss
@@ -14,13 +14,16 @@
 		font: inherit;
 		vertical-align: baseline;*/
 		@include contact-basic;
-		
+		padding-bottom: 10px;
 		.csc-header{
-			margin-bottom: 24px;
+			margin-bottom: 10px;
 			h2 {
 				display: block;
 				font-size: 1.2em;
 				font-weight: bold;
+				padding-top: 10px;
+				text-align: center;
+				border-bottom: 1px solid #ccc;				
 			}
 		}
 		.Tx-Formhandler{
@@ -123,7 +126,7 @@
 						width: 150px;
 					}
 					textarea.textarea-380{
-						background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
+						//background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
@@ -131,6 +134,9 @@
 						width: 237px;
 						height: 143px;
 						resize: none;
+						border-radius: 5px 5px 5px 5px;
+						border: 1px solid #d3c7a7;
+						-webkit-box-shadow: inset 0 0 5px #ececec;
 						//@extend .textarea-input;
 					}
 					.btn-submit{
