--- a/assets/stylesheets/pages/contact/_general-enquiry.scss
+++ b/assets/stylesheets/pages/contact/_general-enquiry.scss
@@ -15,6 +15,7 @@
 		vertical-align: baseline;*/
 		
 		@include contact-basic;
+		padding-bottom: 10px;
 		
 		.csc-header{
 			margin-bottom: 24px;
@@ -22,6 +23,8 @@
 				display: block;
 				font-size: 1.2em;
 				font-weight: bold;
+				text-align: center;
+				border-bottom: 1px solid #ccc;
 			}
 		}
 		.Tx-Formhandler{
@@ -64,15 +67,17 @@
 						//@extend .text-input;
 					}
 					textarea.textarea-380{
-						background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
+						//background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
 						padding: 5px 8px 12px 5px;
 						width: 237px;
-						height: 143px;
+						height: 136px;
 						resize: none;
-						
+						border-radius: 5px 5px 5px 5px;
+						border: 1px solid #d3c7a7;
+						-webkit-box-shadow: inset 0 0 5px #ececec;
 						//@extend .textarea-input;
 					}
 					.btn-submit{
