--- a/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
+++ b/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
@@ -14,19 +14,19 @@
 		font: inherit;
 		vertical-align: baseline;*/
 		@include contact-basic;
-		
+		padding-bottom: 10px;
 		.csc-header{
 			margin-bottom: 24px;
 			h2 {
 				display: block;
 				font-size: $h2_size;
 				font-weight: bold;
+				text-align: center;
+				border-bottom: 1px solid #ccc;
 			}
 		}
 		.Tx-Formhandler{
-			
-			#formhandler_contact_form {
-				
+			#formhandler_contact_form {			
 				fieldset{
 					font-size: 100%;
 					font: inherit;
@@ -45,8 +45,6 @@
 						font-size:9pt;
 						
 					}
-					
-						
 					Div.row{
 						label{
 							font-size:8pt;
@@ -65,14 +63,17 @@
 						//@extend .text-input;
 					}
 					textarea.textarea-380{
-						background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
+						//background: image-url("page-sprite.png") no-repeat scroll 0 -1095px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
 						padding: 5px 8px 12px 5px;
 						width: 237px;
-						height: 143px;
+						height: 136px;
 						resize: none;
+						border-radius: 5px 5px 5px 5px;
+						border: 1px solid #d3c7a7;
+						-webkit-box-shadow: inset 0 0 5px #ececec;
 						//@extend .textarea-input;
 					}
 					.btn-submit{
