--- a/assets/stylesheets/pages/contact/_general-enquiry.scss
+++ b/assets/stylesheets/pages/contact/_general-enquiry.scss
@@ -18,11 +18,12 @@
 		padding-bottom: 10px;
 		
 		.csc-header{
-			margin-bottom: 24px;
+			margin-bottom: 10px;
 			h2 {
 				display: block;
 				font-size: 1.2em;
 				font-weight: bold;
+				padding-top: 10px;
 				text-align: center;
 				border-bottom: 1px solid #ccc;
 			}
