--- a/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
+++ b/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
@@ -16,11 +16,12 @@
 		@include contact-basic;
 		padding-bottom: 10px;
 		.csc-header{
-			margin-bottom: 24px;
+			margin-bottom: 10px;
 			h2 {
 				display: block;
 				font-size: $h2_size;
 				font-weight: bold;
+				padding-top: 10px;
 				text-align: center;
 				border-bottom: 1px solid #ccc;
 			}
