--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -33,7 +33,7 @@
 			.ui-inline{
 				//margin-top:40px;
 				background:#f4e9d5;
-				border :1px solid #7E7676;
+				//border :1px solid #7E7676;
 				border-radius: 5px 5px 5px 5px;
 				webkit-margin-start: 0px;
 				ul{
