--- a/assets/stylesheets/pages/_press.scss
+++ b/assets/stylesheets/pages/_press.scss
@@ -3,6 +3,7 @@
 		.csc-default{
 			overflow: hidden;
 			@include contact-basic;
+			margin-bottom: 0px;
 			padding-bottom: 10px;
 			.csc-header{
 				margin-bottom: 10px;
@@ -10,7 +11,7 @@
 					display: block;
 					font-size: 1.2em;
 					font-weight: bold;
-					padding-top: 10px;
+					padding-bottom: 10px;
 					text-align: center;
 					border-bottom: 1px solid #cccccc;
 				}
@@ -24,6 +25,7 @@
 			font: inherit;
 			vertical-align: baseline;
 			overflow: hidden;
+			margin-top: 0px;
 			Div.tabmenu-box {
 				position: relative;
 				float: left;
@@ -34,11 +36,11 @@
 					height: 36px;
 					margin:1%;
 					border-bottom: 1px solid #d7ccae;
-					padding: 0 0 0 10px;
+					padding: 0 0 0 0px;
 					li{
 						position: relative;
 						float: left;
-						font-size:9pt;
+						font-size:14px;
 						display: block;
 						margin: 0 0 0 -1px;
 						line-height: 37px;
@@ -51,6 +53,7 @@
 							overflow: hidden;
 							text-decoration: none;
 							color: #1480ee;
+							font-size: 14px;
 							span {
 								display: block;
 								padding: 0 10px;
@@ -61,10 +64,9 @@
 					}
 					li.active {
 						z-index: 100;
-						font-size:9pt;
 						font-weight:bold;
 						a {
-							font-size: 12px;
+							font-size: 14px;
 							background-position: 0 0;
 							color: #262626;
 						}
