--- a/assets/stylesheets/pages/contact/_customer-request.scss
+++ b/assets/stylesheets/pages/contact/_customer-request.scss
@@ -44,7 +44,9 @@
 					select{
 						width:auto;
 						font-size:8.5pt;
-						max-width:180px;
+						//max-width:180px;
+						width: 95%;
+						padding: 5px
 					}
 					
 						
@@ -77,19 +79,27 @@
 						border: none;
 						margin: 0 6px 0 0;
 						padding: 5px;
-						background: image-url("page-sprite.png") 0 -1570px no-repeat;
-						width: 73px;
+						//background: image-url("page-sprite.png") 0 -1570px no-repeat;
+						//width: 73px;
 						color: #545454;
 						font-size: $date_font;
+						border-radius: 5px 5px 5px 5px;
+						border: 1px solid #d3c7a7;
+						-webkit-box-shadow: inset 0 0 5px #ececec;
+						width:92%
 						//@extend .date-input;
 					}
 					input.textwide {
-						background: image-url("page-sprite.png")  no-repeat scroll 0 -1537px transparent;
+						//background: image-url("page-sprite.png")  no-repeat scroll 0 -1537px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
-						width:237px;
+						//width:237px;
 						padding: 6px 5px;
+						border-radius: 5px 5px 5px 5px;
+						border: 1px solid #d3c7a7;
+						-webkit-box-shadow: inset 0 0 5px #ececec;
+						width:95%;
 						//@extend .text-input;
 					}
 					textarea.textarea-380{
@@ -98,7 +108,7 @@
 						color: #545454;
 						margin: 0;
 						padding: 5px 8px 12px 5px;
-						width: 237px;
+						width:95%;
 						height: 136px;
 						resize: none;
 						border-radius: 5px 5px 5px 5px;
