--- a/assets/stylesheets/pages/contact/_booking_inquiry.scss
+++ b/assets/stylesheets/pages/contact/_booking_inquiry.scss
@@ -123,7 +123,7 @@
 						color: #545454;
 						margin: 0;
 						width: 83%;
-						padding: 6px 5px;
+						padding: 5px;
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;
 						-webkit-box-shadow: inset 0 0 5px #ececec
