--- a/assets/stylesheets/pages/contact/_booking_inquiry.scss
+++ b/assets/stylesheets/pages/contact/_booking_inquiry.scss
@@ -134,7 +134,7 @@
 						border: medium none;
 						color: #545454;
 						margin: 0;
-						padding: 6px 5px;
+						padding: 5px;
 						width: 53%;
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;
