--- a/assets/stylesheets/pages/contact/_customer-request.scss
+++ b/assets/stylesheets/pages/contact/_customer-request.scss
@@ -47,6 +47,8 @@
 						//max-width:180px;
 						width: 83%;
 						padding: 5px
+						border-radius: 5px 5px 5px 5px;
+						border: 1px solid #d3c7a7;
 					}
 					
 						
