--- a/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
+++ b/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
@@ -46,7 +46,8 @@
 						font-size:9pt;
 						width: 83%;
 						padding: 5px
-						
+						border-radius: 5px 5px 5px 5px;
+						border: 1px solid #d3c7a7;						
 					}
 					Div.row{
 						label{
