--- a/assets/stylesheets/pages/contact/_general-enquiry.scss
+++ b/assets/stylesheets/pages/contact/_general-enquiry.scss
@@ -47,7 +47,7 @@
 						width:auto;
 						font-size:8.5pt;
 						width: 83%;
-						padding: 5px
+						padding: 5px;
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;						
 					}
