--- a/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
+++ b/assets/stylesheets/pages/contact/_informationClubMagicLife.scss
@@ -45,7 +45,7 @@
 						width:auto;
 						font-size:9pt;
 						width: 83%;
-						padding: 5px
+						padding: 5px;
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;						
 					}
@@ -67,7 +67,7 @@
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;
 						-webkit-box-shadow: inset 0 0 5px #ececec;
-						width: 83%;
+						width: 83% !important;
 						//@extend .text-input;
 					}
 					textarea.textarea-380{
