--- a/assets/stylesheets/pages/contact/_booking_inquiry.scss
+++ b/assets/stylesheets/pages/contact/_booking_inquiry.scss
@@ -49,7 +49,7 @@
 						width:auto;
 						font-size:8.5pt;
 						//max-width:180px;
-						width: 83%;
+						width: 83% !important;
 						padding: 5px;
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;
@@ -114,17 +114,17 @@
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;
 						-webkit-box-shadow: inset 0 0 5px #ececec;
-						width:80%;
+						width:80% !important;
 					}
 					#zip{
-						width:30%;
+						width:30% !important;
 					}
 					input.textwide {
 						//background: image-url("page-sprite.png")  no-repeat scroll 0 -1537px transparent;
 						border: medium none;
 						color: #545454;
 						margin: 0;
-						width: 83%;
+						width: 83% !important;
 						padding: 5px;
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;
@@ -137,7 +137,7 @@
 						color: #545454;
 						margin: 0;
 						padding: 5px;
-						width: 53%;
+						width: 53% !important;
 						border-radius: 5px 5px 5px 5px;
 						border: 1px solid #d3c7a7;
 						-webkit-box-shadow: inset 0 0 5px #ececec;
@@ -148,7 +148,7 @@
 						color: #545454;
 						margin: 0;
 						padding: 5px 8px 12px 5px;
-						width: 83%;
+						width: 83% !important;
 						height: 143px;
 						resize: none;
 						border-radius: 5px 5px 5px 5px;
