--- a/assets/stylesheets/pages/_home.scss
+++ b/assets/stylesheets/pages/_home.scss
@@ -81,7 +81,8 @@
 						font-size : 14px;
 						text-decoration:none;
 						text-align:center;
-						color:black
+						color:black;
+						font-weight:bold !important;
 						
 					}
 				}
