--- a/assets/stylesheets/pages/contact/_customer-request.scss
+++ b/assets/stylesheets/pages/contact/_customer-request.scss
@@ -91,6 +91,9 @@
 						width:80% !important;
 						//@extend .date-input;
 					}
+					#vorgangsnummer{
+						width:83% !important;
+					}
 					input.textwide {
 						//background: image-url("page-sprite.png")  no-repeat scroll 0 -1537px transparent;
 						border: medium none;
