--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -158,15 +158,16 @@
 		
 					
 					a{
-						background: image-url("language-select.png") no-repeat scroll 95% center rgba(0, 0, 0, 0);
-						height: 21px;
+						//background: image-url("language-select.png") no-repeat scroll 95% center rgba(0, 0, 0, 0);
+						height: 32px;
 						left: 0;
-						line-height: 21px;
+						line-height: 32px;
 						padding: 0 9px;
 						position: absolute;
-						top: 0;
+						top: -2px;
 						width: 40px;
-						
+						background: #fff url("language-select.png") no-repeat right;
+						border-radius: 5px 5px 5px 5px;
 
 					}	
 				}
