--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -166,7 +166,7 @@
 						position: absolute;
 						top: -2px;
 						width: 40px;
-						background: #fff url("language-select.png") no-repeat right;
+						background: #fff image-url("language-select.png") no-repeat right;
 						border-radius: 5px 5px 5px 5px;
 
 					}	
