--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -70,8 +70,7 @@
 					//right: 10%;
 					top: 10px;
 					width: 60px;
-					right: 18%;
-					float: right;
+					right: 70px;
 				}
 				ul{
 					/*float:left;
@@ -129,34 +128,15 @@
 					clear: both;
 				}
 			}
-			dl{
-				
-				/*position:relative;
-				float:right;
-				display:block;
-				display:block;
-				margin-left: 50%;*/
-				
-				//left: 10px;
-				//position: absolute;
-				//top: 0;
-				
+			dl{			
 				position: absolute;
 				top: 0;
-				right: 17.5%;
-				float: right;
-				
-				//position: relative;
-				//float: right;
-				//margin: -40px 10px 0px 0px;
+				right: 60px;
 				dt{
 					position: relative;
 					float: left;
 					margin: 0px;
 					padding: 0px;
-					
-		
-					
 					a{
 						//background: image-url("language-select.png") no-repeat scroll 95% center rgba(0, 0, 0, 0);
 						height: 32px;
@@ -191,6 +171,7 @@
 						z-index: 10000;
 						position: relative;
 						width: auto;
+						border-radius: 5px 5px 5px 5px;
 						//min-width: 58px;
 						@include ul-webkit-padding;
 						//-webkit-padding-start: 0px;
